--- a/readme.adoc
+++ b/readme.adoc
@@ -13,7 +13,7 @@ image:https://travis-ci.org/neo4j-contrib/neo4j-apoc-procedures.svg[alt="Travis 
 
 [WARNING]
 ====
-Neo4j 3.2 has increased security for procedures and functions (aka sandboxing).
+Neo4j 3.2 已经增加了过程和函数的安全性 (即沙盒).
 Procedures that use internal APIs have to be allowed in `$NEO4J_HOME/conf/neoj4.conf` with, e.g. `+dbms.security.procedures.unrestricted=apoc.trigger.*,apoc.meta.*+` for security reasons (or `+apoc.*+` for all).
 
 If you want to use this via docker, you need to amend `+-e NEO4J_dbms_security_procedures_unrestricted=apoc.\\\*+` to your `docker run ...` command. The three backslashes are necessary to prevent wildcard expansions.
